# moirai

./: .gitignore  README.md  pyproject.toml
.github/workflows/: update-world-cup-dashboard.yml
data/cache/football_elo_polymarket/: elo_2026_results.tsv  elo_en_teams.tsv  elo_fixtures.tsv  polymarket_events_soccer-fifwc_0_100.json  polymarket_events_soccer-fifwc_0_500.json  polymarket_events_soccer-fifwc_compact.json  polymarket_price_history_100271816376241251014968205943425335239986161152505983067018696271142538695180_1782223200_1782244800_f1.json  polymarket_price_history_100449855631460383771496636579649101652260436211530699431231329495234919317146_1781636400_1781658000_f1.json  polymarket_price_history_101169625442991971991769741013992007816991499249638079700297870094210380057342_1781467200_1781488800_f1.json  polymarket_price_history_101256141817216466245038151589296191044974050560393587426784474074655264282404_1781884800_1781906400_f1.json  polymarket_price_history_10127485596146788190022715162162490005929142831190335412854285290235849822876_1781647200_1781668800_f1.json  (+477 more)
docs/: football_elo_edges.html  index.html
docs/data/football_elo_polymarket/: last_updated.txt  world_cup_knockout_bracket.csv  (+6 more)
notebooks/: 01_download_match_history.ipynb  02_build_elo_ratings.ipynb  03_predict_matchup.ipynb  04_upcoming_matches.ipynb  05_portfolio_simulation.ipynb  06_international_football_elo_polymarket.ipynb  wc_knockout_bracket.py  wc_polymarket_cache.py
src/moirai/: __init__.py  config.py  predict.py
tests/: test_elo.py  test_leaguepedia.py  test_predict.py
(+8 files in other folders)
