[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "moirai"
version = "0.1.0"
description = "Notebook-first League of Legends esports match probability analysis."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "duckdb>=1.0",
    "httpx>=0.27",
    "ipykernel>=6.29",
    "jupyter>=1.0",
    "matplotlib>=3.8",
    "pandas>=2.2",
    "pyarrow>=16.0",
    "pydantic>=2.7",
    "requests>=2.31",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "ruff>=0.4",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
